Save deletions, rewrite index and move around some files

--- a/HistoricWebsite.html
+++ b/HistoricWebsite.html
@@ -51,7 +51,7 @@
 
         <p class="BusinessAboutMe">
             <em>Eric Spencer</em><br>
-            <em>Class of 2026</em><br>
+            <strong>Loyola University Chicago</strong> | <em>Class of 2026</em><br>
             <em>College of Arts and Sciences</em> | <strong>Computer Science</strong><br>
             <em>Quinlan School of Business</em> | <strong>Information Systems</strong><br>
         </p>
