--- a/BinaryPuzzle.html
+++ b/BinaryPuzzle.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="styles.css"/>
     <title>Binary Bomb Puzzle</title>
+    <style>
+        .paragraph {
+            text-align: left;
+            background-color: black;
+            color: white;
+            background-size: color;
+            background-repeat: no-repeat;
+            max-width: 90%;
+            height: auto;
+            width: 800px;
+            margin: auto;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+        .paragraph-centered {
+            text-align: center;
+            background-color: black;
+            color: white;
+            background-size: color;
+            background-repeat: no-repeat;
+            max-width: 100%;
+            height: auto;
+            width: 800px;
+            margin: auto;
+            padding: 0 3px 0 3px;
+        }
+        .paragraph ul {
+            list-style-type: disc; 
+            margin-left: 20px;
+        }
+        .paragraph code {
+            font-family: Consolas, Monaco, monospace; 
+            background-color: #ffffff;
+            padding: 2px 4px;
+            border: 1px solid #ccc; 
+        }
+    </style>
 </head>
 <body>
 <div class="paragraph">
